po: update po/nl_NL/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-26 16:54+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-10 19:28+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +34,7 @@ msgstr "Bewerk uw pagina"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Tell Friends"
-msgstr "Informeer vrienden"
+msgstr "Mond-tot-mondreclame"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
@@ -54,11 +54,11 @@ msgstr "Supporter profiel"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
-msgstr "Maak 'Informeer een vriend' functionaliteit"
+msgstr "Gebruik functie 'Mond-tot-mondreclame' toestaan"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "'Tell a friend' maximum recipients limit"
-msgstr "Limiet aantal 'Informeer een vriend' "
+msgstr "Limiet aantal keer 'Mond-tot-mondreclame'"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Please enter a valid limit."
@@ -189,7 +189,7 @@ msgstr "Target Entiteit Type"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
-msgstr "Limiet Informeer een vriend"
+msgstr "Limiet mond-tot-mondreclame"
 
 #: CRM/PCP/DAO/PCPBlock.php templates/CRM/PCP/Form/Event.hlp
 msgid "Link Text"
@@ -301,7 +301,7 @@ msgstr "Persoonlijke campagnepagina's mogelijk maken? (voor deze donatie pagina)
 msgid ""
 "if Tell Friend is enabled, Maximum recipients limit should be greater than "
 "zero."
-msgstr "Als \"informeer een vriend\" actief is, moet het maximum aantal ontvangers groter zijn dan nul. "
+msgstr "Als Mond-tot-mondreclame\" is ingeschakeld, moet het maximum aantal ontvangers ingevuld worden. "
 
 #: CRM/PCP/Form/Contribute.php CRM/PCP/Form/Event.php
 msgid "Supporter profile is a required field."
@@ -331,11 +331,11 @@ msgstr "Persoonlijke campagnepagina's mogelijk maken? (voor dit evenement)"
 msgid ""
 "if Tell Friend is enable, Maximum recipients limit should be greater than "
 "zero."
-msgstr "Als 'Informeer een vriend' actief is, moet de limiet voor het maximum aantal ontvangers groter zijn dan nul."
+msgstr "Als 'Mond-tot-mondreclame' is ingeschakeld, moet de limiet voor het maximum aantal ontvangers groter zijn dan nul."
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been deleted."
-msgstr "De campagne-pagina '%1' is verwijderd."
+msgstr "De campagnepagina '%1' is verwijderd."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
@@ -545,7 +545,7 @@ msgid ""
 "to send emails to people inviting them to visit their page and register or "
 "contribute? NOTE: Tell a Friend emails will automatically include a link to "
 "the sender's campaign page."
-msgstr "Kan de eigenaar van de persoonlijke campagnepagina de 'informeer een vriend' functie gebruiken om mails te sturen aan mensen om hen uit te nodigen de pagina te bezoeken en te registreren of doneren? NB: 'Informeer een vriend' e-mail bevat een link naar de campagnepagina van de zender. "
+msgstr "Kan de eigenaar van de persoonlijke campagnepagina de functie 'Mond-tot-mondreclame' gebruiken om mails te sturen aan mensen om hen uit te nodigen de pagina te bezoeken en te registreren of doneren? NB: Deze mail bevat een link naar de campagnepagina van de afzender. "
 
 #: templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -568,7 +568,7 @@ msgid ""
 "Select the related online contribution page that supporters of this event "
 "are promoting. Visitors to their Personal Campaign pages will be directed to"
 " the selected online contribution page to donate money."
-msgstr "Kies de gerelateerde online donatie pagina die uw supporters voor dit evenement promoten. Bezoekers van hun persoonlijke campagnepagina's worden naar de geselecteerde online donatiepagina geleid om te doneren. "
+msgstr "Kies de gerelateerde online donatiepagina die uw supporters voor dit evenement promoten. Bezoekers van hun persoonlijke campagnepagina's worden naar de geselecteerde online donatiepagina geleid om te doneren. "
 
 #: templates/CRM/PCP/Form/Event.tpl
 msgid ""
@@ -605,7 +605,7 @@ msgid ""
 "photo, text, and personal information. She can then send a link to the page "
 "to her friends, soliciting support for your organization. This is a powerful"
 " way to widely and quickly spread the message about your campaign."
-msgstr "Persoonlijke campagne pagina's (PCP's) stellen uw achterban in staat eigen fondsenwervingspagina's voor uw organisatie te maken. Na een donatie te hebben gedaan, kan de donateur kiezen zelf een pagina te maken met een eigen foto, tekst en persoonlijke informatie. Zij kan dan een link naar de pagina aan haar vrienden sturen, om steun voor uw organisatie te verwerven. Dit is een krachtige manier om uw boodschap wijd en zijd te verspreiden. "
+msgstr "Persoonlijke campagnepagina's (PCP's) stellen uw achterban in staat een eigen fondsenwervingspagina voor uw organisatie te maken. Na een donatie te hebben gedaan, kan de donateur kiezen zelf een pagina te maken met een eigen foto, tekst en persoonlijke informatie. Zij kan dan een link naar de pagina aan haar vrienden sturen, om steun voor uw organisatie te verwerven. Dit is een krachtige manier om uw boodschap wijd en zijd te verspreiden. "
 
 #: templates/CRM/PCP/Page/PCP.hlp
 msgid ""
@@ -763,7 +763,7 @@ msgstr "Ga naar uw pagina"
 msgid ""
 "When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
 "your page, tell friends, and update your contact info."
-msgstr "Als u uw campagnepagina bekijkt terwijl u ingelogd bent, bevat de pagina links om de pagina te bewerken, vrienden erover te informeren en uw contact informatie bij te werken."
+msgstr "Als u uw campagnepagina bekijkt terwijl u ingelogd bent, bevat de pagina links om de pagina te bewerken, vrienden erover te informeren en uw contactinformatie bij te werken."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -823,7 +823,7 @@ msgstr "Uw pagina promoten"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "You can begin your fundraising efforts using our \"Tell a Friend\" form"
-msgstr "U kunt beginnen met fondsen werven door het formulier \"Informeer een vriend\" te gebruiken"
+msgstr "U kunt beginnen met fondsen te werven door het formulier \"Mond-tot-mondreclame\" te gaan gebruiken"
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 msgid "Click this link and follow the prompts"
