po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:13+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-10 19:52+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1864,7 +1864,7 @@ msgid ""
 "invoked, this job will deliver email to the recipients specified for the "
 "report. The report can be attached to the email as a PDF file (default), as "
 "a CSV file, or included in HTML format."
-msgstr "Uw beheerder moet een job \"Mail Reports\" inplannen om elk rapport aan te laten maken en te laten versturen. De job stuurt dan naar elke ontvanger een e-mail. Het rapport kan als PDF-bestand (standaard) als bijlage toegevoegd worden, of als CSV-bestand of in de berichttekst staan in HTML-formaat."
+msgstr "Uw beheerder moet een taak \"Mail Reports\" inplannen om elk rapport te laten aanmaken en te laten versturen. De taak stuurt naar elke ontvanger een e-mail. Het rapport kan als PDF-bestand (standaard) als bijlage toegevoegd worden, of als CSV-bestand of in de berichttekst staan in HTML-formaat."
 
 #: templates/CRM/Report/Form/Settings.hlp
 msgid ""
