po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-09 14:14+0000\n"
+"PO-Revision-Date: 2016-02-10 19:49+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -164,11 +164,11 @@ msgid ""
 "greetings on all records. Leaving that option absent, or setting it to "
 "force=0, will only rebuild greetings for contacts that do not currently have"
 " a value stored. %1"
-msgstr "De job voor het bijwerken van begroetingen kan erg veel capaciteit vragen en zal normaal gesproken niet een job zijn die regelmatig periodiek uit gevoerd zal worden. Als je dit toch wil, doe dit dan niet met de force=1 optie, dan zouden alle begroetingen opnieuw worden opgebouwd. Laat deze optie weg, of gebruik force=0,  om alleen begroetingen van contacten opnieuw te doen als ze nog geen waarde hebben. %1"
+msgstr "De taak voor het bijwerken van begroetingen kan erg veel capaciteit vragen en zal er normaal gesproken niet een zijn die regelmatig periodiek uit gevoerd zal worden. Als je dit toch wil, doe dit dan niet met de force=1 optie, dan worden alle begroetingen opnieuw opgebouwd. Laat deze optie weg, of gebruik force=0,  om alleen begroetingen van contacten opnieuw te maken als ze nog geen waarde hebben. %1"
 
 #: CRM/Admin/Form/Job.php
 msgid "Warning: Update Greeting job enabled"
-msgstr "Waarschuwing; Job voor upgraden begroetingen is ingeschakeld."
+msgstr "Waarschuwing; Taak voor het bijwerken van begroetingen is ingeschakeld."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
@@ -3617,7 +3617,7 @@ msgid ""
 "price sets, profiles, events, participants, tell-a-friend pages, grants, "
 "mailings, memberships, membership blocks, pledges, pledge blocks and active "
 "payment processor types."
-msgstr "Indien ingeschakeld, worden statistieken over uw CiviCRM installatie anoniem doorgegeven aan het CiviCRM-team om hen te helpen bij het prioriteren van de ontwikkelingsinspanningen. De volgende informatie wordt verzameld: de versienummers van CiviCRM, PHP, MySQL en het raamwerk (Drupal/Joomla/zelfstandig) en de standaardtaal. Aantallen (maar geen gegevens) van de volgende recordtypes worden gerapporteerd: contacten, activiteiten, dossiers, relaties, bijdragen, bijdragepagina's, bijdrageproducten, bijdragewidgets, kortingen, prijssets, profielen, evenementen, deelnemers, informeer-een-vriend-pagina's, toelagen, mailings, lidmaatschappen, lidmaatschapsblokken, toezeggingen, toezeggingsblokken en actieve betalingsmethoden."
+msgstr "Indien ingeschakeld, worden statistieken over uw CiviCRM installatie anoniem doorgegeven aan het CiviCRM-team om hen te helpen bij het prioriteren van de ontwikkelingsinspanningen. De volgende informatie wordt verzameld: de versienummers van CiviCRM, PHP, MySQL en het raamwerk (Drupal/Joomla/zelfstandig) en de standaardtaal. Aantallen (maar geen gegevens) van de volgende recordtypes worden gerapporteerd: contacten, activiteiten, dossiers, relaties, bijdragen, bijdragepagina's, bijdrageproducten, bijdragewidgets, kortingen, prijssets, profielen, evenementen, deelnemers, mond-tot-mondreclame-pagina's, toelagen, mailingen, lidmaatschappen, lidmaatschapsblokken, toezeggingen, toezeggingsblokken en actieve betalingsmethoden."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -5001,7 +5001,7 @@ msgstr "Er zijn geen keuzes in deze keuzegroep. U kunt er <a href='%1'>een toevo
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr "Activiteittypes"
+msgstr "Activiteitstypes"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
