--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:12+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-10 19:15+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1312,7 +1312,7 @@ msgstr "Als u wilt dat de beheerder elke PCP notificatie ontvangst krijgt, type 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Tell-a-Friend"
-msgstr "Informeer-een-vriend"
+msgstr "Mond-tot-mondreclame"
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp
@@ -1321,12 +1321,12 @@ msgid ""
 "to send emails to people inviting them to visit their page and make a "
 "contribution? NOTE: Tell a Friend emails will automatically include a link "
 "to the sender's campaign page."
-msgstr "Kan de eigenaar van een persoonlijke campagne pagina de 'Informeer een vriend' functionaliteit gebruiken om mails te sturen aan mensen met een uitnodiging om hun pagina te bezoeken en een donatie te doen? NB: Informeer een vriend mails bevatten een link naar de campagne pagina van de zender."
+msgstr "Kan de eigenaar van een persoonlijke campagne pagina de functie 'Mond-tot-mondreclame' gebruiken om mails te sturen aan mensen met een uitnodiging om hun pagina te bezoeken en een donatie te doen? NB: Deze mails bevatten een link naar de campagnepagina van de afzender."
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Tell-a-Friend Limit"
-msgstr "Informeer-een-vriend limiet"
+msgstr "Limiet mond-tot-mondreclame"
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
