--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -14,6 +14,7 @@
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
+# Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
 # Vincent <vincent.primault@gmail.com>, 2011
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-07 20:57+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-10 13:50+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6587,14 +6588,14 @@ msgid ""
 "<strong>This feature should NOT be enabled for production sites.</strong><br"
 " />Set this value to <strong>Yes</strong> if you want to use one of "
 "CiviCRM's debugging tools."
-msgstr ""
+msgstr "<strong>Cette fonctionnalité ne devrait PAS être activée sur un site en production.</strong><br />\nSélectionnez <strong>Oui</strong> si vous voulez utiliser un des outils de débogage de CiviCRM."
 
 #: templates/CRM/Admin/Form/Setting/Debugging.tpl
 msgid ""
 "<strong>This feature should NOT be enabled for production sites.</strong><br"
 " />Set this value to <strong>Yes</strong> if you want to display a backtrace"
 " listing when a fatal error is encountered."
-msgstr ""
+msgstr "<strong>Cette fonctionnalité ne devrait PAS être activée sur un site en production.</strong><br />\nConfigurez cette valeur à <strong>Oui</strong> si vous voulez afficher la pile lors d'une erreur fatale. "
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid "Allow CiviMail users to send mailings with a custom Reply-To header."
