po: update po/it_IT/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/admin.po
+++ b/po/it_IT/admin.po
@@ -13,12 +13,13 @@
 # Marco Mapelli <marco.mapelli@slamservice.it>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
+# vodkina <mnemosyne@logioshermes.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 23:00+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-10 08:34+0000\n"
+"Last-Translator: vodkina <mnemosyne@logioshermes.org>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +57,7 @@ msgstr "Il tipo di contatto '%1\\' è stato salvato."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "L'amministratore di sistema ha disabilitato questa funzionalità."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
@@ -76,7 +77,7 @@ msgstr "Scarica e Installa"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install Extension"
-msgstr ""
+msgstr "Scarica ed installa Estensione"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -96,7 +97,7 @@ msgstr "Disabilita estensione"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
-msgstr ""
+msgstr "Estensione disinstallata"
 
 #: CRM/Admin/Form/Extensions.php
 msgid ""
@@ -106,27 +107,27 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
-msgstr ""
+msgstr "Errore di disinstallazione"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
-msgstr ""
+msgstr "Estensione installata"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Enabled"
-msgstr ""
+msgstr "Estensione abilitata"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Disabled"
-msgstr ""
+msgstr "Estensione disabilitata"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr ""
+msgstr "Estensione aggiornata"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr ""
+msgstr "Aggiornamento dell'Estensione fallito"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
