--- a/po/pt_PT/common-base.po
+++ b/po/pt_PT/common-base.po
@@ -7,6 +7,7 @@
 # Carlos Sousa <carlossoaresdesousa@gmail.com>, 2012
 # Nana, 2013
 # Nana, 2012
+# Emilio Fialho <emilio_fialho@hotmail.com>, 2016
 # jachambel <jose.chambel@gmail.com>, 2012
 # Joao Galvao, 2015
 # jachambel <jose.chambel@gmail.com>, 2012
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-30 09:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-11 21:50+0000\n"
+"Last-Translator: Emilio Fialho <emilio_fialho@hotmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19547,7 +19548,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Male"
-msgstr ""
+msgstr "Masculino"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Transgender"
