po: update po/fr_FR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-07 20:54+0000\n"
+"PO-Revision-Date: 2016-02-12 20:09+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2334,7 +2334,7 @@ msgstr "Consulter"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_mailing_name.inc
 msgid "Mailing Name"
-msgstr ""
+msgstr "Nom du mailing"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Registration Page"
@@ -2754,7 +2754,7 @@ msgstr "Le mailing a été créé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created mailing"
-msgstr ""
+msgstr "Mailing créé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been updated"
@@ -2762,7 +2762,7 @@ msgstr "Le mailing a été mis à jour"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Updated Mailing"
-msgstr ""
+msgstr "Mailing mis à jour"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content has been uploaded"
@@ -2770,7 +2770,7 @@ msgstr "Le contenu du mailing a été téléchargé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content uploaded"
-msgstr ""
+msgstr "Contenu de mailing téléchargé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been scheduled"
@@ -2778,7 +2778,7 @@ msgstr "Le mailing a été programmé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Scheduled mailing"
-msgstr ""
+msgstr "Mailing programmé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been approved/rejected"
@@ -2786,7 +2786,7 @@ msgstr "Le mailing a été validé/rejeté"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Approved mailing"
-msgstr ""
+msgstr "Mailing validé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Inform scheduler about the mailing"
@@ -2802,7 +2802,7 @@ msgstr "Le mailing a été ajouté à la file d'attente"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Queued mailing"
-msgstr ""
+msgstr "Mailing en attente"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been completed"
@@ -2810,7 +2810,7 @@ msgstr "Le mailing est terminé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Completed mailing"
-msgstr ""
+msgstr "Mailing terminé"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Add Contact to CiviCRM Group"
@@ -2834,7 +2834,7 @@ msgstr "Envoyer le(s) mail(s)"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Send an Email"
-msgstr ""
+msgstr "Envoyer un courriel"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid ""
