po: update po/fr_FR/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:28+0000\n"
+"PO-Revision-Date: 2016-02-12 20:07+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1639,7 +1639,7 @@ msgstr "Générer le(s) reçu(s)"
 msgid ""
 "Email was NOT sent to %1 contacts (no email address on file, or "
 "communication preferences specify DO NOT EMAIL, or contact is deceased)."
-msgstr "Le courriel n'a PAS été envoyé à %1 contact(s) (aucun courriel renseigné ou ne souhaite pas recevoir de courriel ou décédé)."
+msgstr "Le courriel n'a PAS été envoyé à %1 contact(s) (aucun courriel renseigné, ou ne souhaite pas recevoir de courriel, ou décédé)."
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Email Error"
@@ -5196,7 +5196,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "From Email Address is required"
-msgstr ""
+msgstr "Une adresse courrier d'expéditeur est requise"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
