--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-02 18:20+0000\n"
+"PO-Revision-Date: 2016-02-12 20:09+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -14561,7 +14561,7 @@ msgstr "Commencez à saisir pour filtrer la liste des champs de fusion."
 msgid "Email will NOT be sent to %count contact."
 msgid_plural "Email will NOT be sent to %count contacts."
 msgstr[0] "L'email ne sera Pas envoyé au contact."
-msgstr[1] "L'email ne sera Pas envoyé à %count contacts."
+msgstr[1] "Le courriel ne sera PAS envoyé à %count contacts."
 
 #: templates/CRM/Contact/Form/Task/Email.tpl
 #: templates/CRM/Contact/Form/Task/SMS.tpl
