po: update po/fr_FR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-06 21:34+0000\n"
+"PO-Revision-Date: 2016-02-12 14:23+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1559,11 +1559,11 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group ID"
-msgstr ""
+msgstr "ID du groupe de mailing"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Type"
-msgstr ""
+msgstr "Type de groupe du mailing"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity Table"
@@ -1716,7 +1716,7 @@ msgstr "Une adresse email est requise pour se désinscrire."
 msgid ""
 "The email address: %1 you have entered does not match the email associated "
 "with this unsubscribe request."
-msgstr ""
+msgstr "L'adresse email: %1 que vous avez indiquée ne correspond pas à celle associée avec la demande de désabonnement."
 
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
@@ -1805,7 +1805,7 @@ msgstr "Date de création du test AB"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job ID"
-msgstr ""
+msgstr "ID de la tâche de mailing"
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Mailing Event Queue ID"
