po: update po/pl_PL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/admin.po
+++ b/po/pl_PL/admin.po
@@ -9,6 +9,7 @@
 # Karolina Pomarańska <karolina@caltha.pl>, 2015
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
 # Mateusz Sikora <magu.bba@gmail.com>, 2015
+# Michael Smitch <thenurrr23@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2014
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 13:39+0000\n"
-"Last-Translator: Mateusz Sikora <magu.bba@gmail.com>\n"
+"PO-Revision-Date: 2016-02-14 01:59+0000\n"
+"Last-Translator: Michael Smitch <thenurrr23@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -154,7 +155,7 @@ msgstr "Czy to zaplanowane zadanie jest aktywne?"
 
 #: CRM/Admin/Form/Job.php
 msgid "Given API command is not defined."
-msgstr ""
+msgstr "Podana komenda API jest niezdefinowna"
 
 #: CRM/Admin/Form/Job.php
 msgid "Scheduled Job Deleted."
@@ -400,7 +401,7 @@ msgstr "Etykieta ta już istnieje w bazie danych dla tej grupy opcji. Proszę wy
 
 #: CRM/Admin/Form/Options.php templates/CRM/Admin/Page/Options.tpl
 msgid "Status Class"
-msgstr ""
+msgstr "Status klasy"
 
 #: CRM/Admin/Form/Options.php
 msgid "Regular Expression?"
@@ -1511,7 +1512,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
-msgstr ""
+msgstr "Tag '%1' został usunięty."
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been saved."
@@ -1524,11 +1525,11 @@ msgstr "Zastępowanie słów"
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Please Enter the value for Replacement Word"
-msgstr ""
+msgstr "Proszę wpisać wartość zastępczego wyrazu"
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Please Enter the value for Original Word"
-msgstr ""
+msgstr "Proszę wpisać wartość oryginalnego wyrazu"
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Settings Saved"
@@ -1546,7 +1547,7 @@ msgstr "Ten profil jest obecnie używany przez %1."
 msgid ""
 "If you disable the profile - it will be removed from these forms and/or "
 "modules. Do you want to continue?"
-msgstr ""
+msgstr "Jeżeli wyłączysz profil - zostanie on usunięty z podanych form i modułów. Czy chcesz kontynuować?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this profile?"
@@ -1556,7 +1557,7 @@ msgstr "Jesteś pewny, że chcesz wyłączyć ten profil?"
 msgid ""
 "Unable to disable the '%1' price set - it is currently in use by one or more"
 " active events, contribution pages or contributions."
-msgstr ""
+msgstr "Nie można wyłączyć '%1' zestawu ceny - Jest używany przez jeden lub więcej aktywnych wydarzeń,stron lub składek."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable '%1' Price Set?"
@@ -1590,7 +1591,7 @@ msgstr "Użytkownicy nie będą mogli wybierać tej wartości przy dodawaniu i e
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this financial type?"
-msgstr ""
+msgstr "Czy jesteś pewny że chcesz wyłączyć finansowy typ?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -1601,7 +1602,7 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this financial account?"
-msgstr ""
+msgstr "Czy jesteś pewny że chcesz wyłączyć finansowe konto?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this payment processor?"
@@ -1611,11 +1612,11 @@ msgstr "Jesteś pewien, że chcesz wyłączyć ten procesor płatności?"
 msgid ""
 "Users will no longer be able to select this value when adding or editing "
 "transaction pages."
-msgstr ""
+msgstr "Użytkownicy nie będą mogli dalej wybierać tej wartości przy dodawaniu lub edytowaniu stron transakcji."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this payment processor type?"
-msgstr ""
+msgstr "Jesteś pewny że chcesz wyłączyć ten tryb procesora płatności?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this location type?"
@@ -1673,7 +1674,7 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this price field?"
-msgstr ""
+msgstr "Jesteś pewny że chcesz wyłączyć to pole kwoty?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this Group?"
@@ -1708,14 +1709,14 @@ msgid ""
 "Cancelled, but does NOT send a cancellation request to the payment "
 "processor. You will need to ensure that this recurring payment "
 "(subscription) is cancelled by the payment processor."
-msgstr ""
+msgstr "Ostrzeżenie - Ta akcja ustawia dla CiviCRM stan okresowej składki na Anulowany, lecz NIE WYSYŁA prośby anulowania do procesora płatności.Musisz być pewny iż ta okresowa płatność (subskrypcja) jest anulowana przez procesora płatności."
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
 "This recurring contribution is linked to an auto-renew membership. If you "
 "cancel it, the associated membership will no longer renew automatically. "
 "However, the current membership status will not be affected."
-msgstr ""
+msgstr "Okresowa składa jest połączona z automatycznym odnawianiem członkostwa. Jeżeli anulujesz, powiązane członkostwo nie odnowi się więcej automatycznie. Jednakże, status aktualnego członkostwa nie zmieni się."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to reopen this batch?"
@@ -1740,7 +1741,7 @@ msgstr "Jesteś pewien, że chcesz wyłączyć ta pozycję?"
 
 #: CRM/Admin/Page/APIDoc.php
 msgid "API parameters"
-msgstr ""
+msgstr "Parametry API"
 
 #: CRM/Admin/Page/APIExplorer.php
 msgid "API explorer and generator"
@@ -1796,11 +1797,11 @@ msgstr "Usuń typ kontaku"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Download Extension"
-msgstr ""
+msgstr "Pobierz rozszerzenia"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Failed to read extension (%1). Please refresh the extension list."
-msgstr ""
+msgstr "Nie można odczytać rozszerzenia (%1). Proszę odświeżyć listę rozszerzeń."
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Disabled (Missing)"
@@ -1977,7 +1978,7 @@ msgstr "Nie masz wystarczających uprawnień, aby edytować ten szablon."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Wzór wiadomości"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -2163,7 +2164,7 @@ msgstr "UWAGA: Usunięcie tej opcji spowoduje skasowanie wszystkich wpisów o ak
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
-msgstr ""
+msgstr "Synchronizacja %1 użytkowników"
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize Users to Contacts:"
@@ -2217,14 +2218,14 @@ msgstr ""
 msgid ""
 "Installing this extension will provide you with new functionality. Please "
 "make sure that the extension you're installing comes from a trusted source."
-msgstr ""
+msgstr "Instalowanie tego rozszerzenia umożliwi ci nową funkcjonalność. Upewnij się że to rozszerzenie które instalujesz pochodzi z zaufanego źródła."
 
 #: templates/CRM/Admin/Form/Extensions.tpl
 msgid ""
 "Downloading this extension will provide you with new functionality. Please "
 "make sure that the extension you're installing or upgrading comes from a "
 "trusted source."
-msgstr ""
+msgstr "Pobranie tego rozszerzenia umożliwi ci nową funkcjonalność. Upewnij się że to rozszerzenie które instalujesz lub aktualizujesz pochodzi z zaufanego źródła."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "New Scheduled Job"
