--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 13:50+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-02-14 21:26+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6757,7 +6757,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}Avez-vous enregistré votre site sur CiviCRM.org ? Si non, merci de prendre quelques minutes pour <a href=\"%1\" target=\"_blank\">remplir le formulaire d'enregistrement</a> et nous aider à renforcer l'écosystème CiviCRM. L'information collectée nous aidera à prioriser les améliorations, mieux cibler notre communication et construire la communauté. Si vous avez un rôle technique pour ce site, assurez-vous de cocher la case pour recevoir les informations techniques (liste de diffusion à faible trafic)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
