--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-02-07 20:13+0000\n"
+"PO-Revision-Date: 2016-02-14 21:24+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -154,7 +154,7 @@ msgstr "Puis-je accéder à/créer des tableaux InnoDB dans la base de données 
 msgid ""
 "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM"
 " but is either not available or not enabled in this MySQL database server."
-msgstr ""
+msgstr "Impossible de créer des tables InnoDB. Un support MySQL InnoDB est nécessaire pour CiviCRM, mais ce support n'est pas disponible ou n'est pas activé sur le serveur de cette base de données MySQL."
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
@@ -177,13 +177,13 @@ msgstr "Impossible de verrouiller les tableaux. Cet utilisateur MySQL n'a pas le
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Est-ce que je peux créer des déclencheurs (triggers) dans la base de données ?"
 
 #: install/index.php
 msgid ""
 "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  "
 "privilege."
-msgstr ""
+msgstr "Impossible de créer des déclencheurs. Cet utilisateur MySQL n'a pas le privilège CREER DES DELENCHEURS (CREATE TRIGGERS)."
 
 #: install/index.php
 msgid "PHP5 installed"
@@ -347,7 +347,7 @@ msgstr "N'a pas pu créer une table dans la base de données"
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "N'a pas pu créer un déclencheur de base de données (database trigger)."
 
 #: install/index.php
 msgid "Could not connect to the database server."
@@ -417,7 +417,7 @@ msgstr "Avez-vous enregistré votre site sur CiviCRM.org ? Si non, merci de pren
 msgid ""
 "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to"
 " upload images. All uploaded images are public."
-msgstr ""
+msgstr "Nous avons intégré KCFinder à CKEditor et TinyMCE. Ceci autorise un utilisateur à télécharger des images. Toutes les images téléchargées sont publiques."
 
 #: install/index.php
 msgid "CiviCRM Installed"
@@ -433,13 +433,13 @@ msgid ""
 "authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Les permissions des utilisateurs Drupal ont été automatiquement définies - permettant l'accès aux formulaires et aux fonctionnalités publics de CiviCRM pour les utilisateurs anonymes et authentifiés. Nous vous recommandons de <a %1>vérifier ces permissions</a> pour vous assurer qu'elle sont conformes à vos besoins (<a %2>pour en savoir plus...</a>)"
 
 #: install/index.php
 msgid ""
 "Use the <a %1>Configuration Checklist</a> to review and configure settings "
 "for your new site"
-msgstr ""
+msgstr "Utilisez la <a %1>Checklist de configuration</a> pour vérifier et modifier les configurations de votre nouveau site"
 
 #: install/index.php
 msgid ""
