--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-12 20:07+0000\n"
+"PO-Revision-Date: 2016-02-14 21:41+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -5136,7 +5136,7 @@ msgstr ""
 msgid ""
 "You will need to configure the %1 settings for your Payment Processor before"
 " you can submit a credit card transactions."
-msgstr ""
+msgstr "Vous devez configurer le paramètre %1 de votre processeur de paiement avant de pouvoir proposer des transactions par carte de crédit."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
