po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-14 21:26+0000\n"
+"PO-Revision-Date: 2016-02-15 22:02+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -4399,7 +4399,7 @@ msgid ""
 "begin. You will not be returned to this page after completing these tasks, "
 "but you can always get back here from the <a href=\"%1\">Administer "
 "CiviCRM</a> menu."
-msgstr "L'ensemble suivant de tâches consiste en plusieurs étapes qui doivent être programmées. À cet effet il peut être utile de lire la section %2 du guide de l'utilisateur et de l'administrateur avant de commencer. Vous ne serez pas ramené sur cette page après avoir terminé ces tâches mais vous pouvez toujours y revenir à partir du menu a href=\"%1\">Administrer</a>."
+msgstr "Les tâches suivantes comportent plusieurs étapes, et ont besoin d'être réfléchies au préalable. À cet effet il peut être utile de lire la section %2 du Guide de l'utilisateur et de l'administrateur avant de commencer. Vous ne serez pas ramené sur cette page après avoir terminé ces tâches mais vous pouvez y revenir à tout moment à partir du menu <a href=\"%1\">Administrer</a>."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Organize your contacts"
@@ -4536,7 +4536,7 @@ msgstr "Basé sur"
 
 #: templates/CRM/Admin/Page/ContactType.tpl
 msgid "Add Contact Type"
-msgstr "AJouter un type de contact"
+msgstr "Ajouter un type de contact"
 
 #: templates/CRM/Admin/Page/ContactType.tpl
 msgid ""
@@ -6123,7 +6123,7 @@ msgid ""
 "If you disable this option, the CiviCRM interface will be limited to "
 "traditional browsing. Opening a form will refresh the page rather than "
 "opening a popup dialog."
-msgstr ""
+msgstr "Si vous désactivez cette option, l'interface CiviCRM sera limitée à de la navigation traditionnelle. L'ouverture d'un formulaire rechargera la page au lieu d'ouvrir un fenêtre popup de dialogue."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
@@ -6147,7 +6147,7 @@ msgstr ""
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
 "If enabled, all actions will be logged with a complete record of changes."
-msgstr ""
+msgstr "Si activité, toutes les actions seront journalisées avec un enregistrement complet des changements."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6517,7 +6517,7 @@ msgid ""
 "Controls display of the smart groups that a contact is part of in each "
 "contact's \"Groups\" tab. \"Show on Demand\" provides the best performance, "
 "and is recommended for most sites."
-msgstr ""
+msgstr "Contrôle l'affichage des groupes dynamiques dont chaque contact fait partie dans l'onglet « Groupes ». « Afficher sur demande » assure les meilleures performances et est recommandé pour la plupart des sites."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -6767,21 +6767,21 @@ msgstr "Activer des composants"
 msgid ""
 "CiviCRM is pre-configured with standard options for individual gender (Male,"
 " Female, Transgender). Modify these options as needed for your installation."
-msgstr ""
+msgstr "CiviCRM est pré-configuré avec des choix standards de sexe (ex. masculin, féminin, transgenre). Modifiez ces options selon les besoins de votre installation."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
 "CiviCRM is pre-configured with standard options for individual contact "
 "prefixes (Ms., Mr., Dr. etc.). Customize these options and add new ones as "
 "needed for your installation."
-msgstr ""
+msgstr "CiviCRM est pré-configuré avec des choix standards de titre de civilité (par exemple Mme, M., Dr, etc.). Personnalisez ces options, et ajoutez-en des nouveaux selon les besoins de votre installation."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
 "CiviCRM is pre-configured with standard options for individual contact name "
 "suffixes (Jr., Sr., II etc.). Customize these options and add new ones as "
 "needed for your installation."
-msgstr ""
+msgstr "CiviCRM est pré-configuré avec des choix standards pour les suffixes de nom de particulier (ex. Jr, Sr, II, etc.). Personnalisez ces options, et ajoutez-en des nouveaux selon les besoins de votre installation."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
