po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-12 20:09+0000\n"
+"PO-Revision-Date: 2016-02-15 21:32+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -16271,7 +16271,7 @@ msgid ""
 "Can you search on this field in the Advanced and component search forms? "
 "Also determines whether you can include this field as a display column and /"
 " or filter in related detail reports."
-msgstr "Pouvez-vous rechercher sur ce champ dans les formulaires de recherche avancée et de composant ? détermine aussi si vous pouvez inclure ce champ en tant que colonne de résultat et / ou filtre dans les comptes rendus détaillés associés."
+msgstr "Pouvez-vous rechercher sur ce champ dans les formulaires de recherche avancée et de composant ? Détermine aussi si vous pouvez inclure ce champ en tant que colonne de résultat et / ou de filtre dans les comptes rendus détaillés associés."
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid ""
@@ -17084,7 +17084,7 @@ msgstr "composant CiviMail"
 
 #: templates/CRM/Group/Page/Group.tpl
 msgid "Add Group"
-msgstr "AJouter un groupe"
+msgstr "Ajouter un groupe"
 
 #: templates/CRM/Group/Page/Group.tpl
 msgid ""
