--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 19:15+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:47+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -115,7 +115,7 @@ msgstr "Soort"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not find payment processor meta information"
-msgstr "De informatie van de betaalmethode ontbreekt"
+msgstr "Kan geen meta-informatie over betaalmethode vinden"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
@@ -137,7 +137,7 @@ msgstr "API URL"
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Billing Mode"
-msgstr "Factuur Mode"
+msgstr "Factureringsmodus"
 
 #: CRM/Admin/Form/Preferences/Address.php CRM/Mailing/BAO/Mailing.php
 msgid "Insert Token"
