po: update po/nl_NL/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 19:28+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:54+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr "Mond-tot-mondreclame"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
-msgstr "Contact informatie bijwerken"
+msgstr "Contactinformatie bijwerken"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Enable Personal Campaign Pages?"
@@ -359,7 +359,7 @@ msgstr "Pagina Ingeschakeld"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
-msgstr "Bron type"
+msgstr "Bron-type"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Event Page"
