--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 19:19+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:54+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5120,7 +5120,7 @@ msgstr "Een of meerdere items hebben een ander financieel type dan de bijdrage. 
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Payment Instrument ID"
-msgstr "Betaal Instrument ID"
+msgstr "Betaalwijze-ID"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Status ID"
