--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-10 19:40+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-02-15 15:56+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,7 +139,7 @@ msgstr "Deelnemersstatus"
 #: drupal/modules/views/civicrm/civicrm_handler_filter_payment_instrument.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_type.inc
 msgid "Contribution Type"
-msgstr "Bijdrage Type"
+msgstr "Bijdrage-type"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_page.inc
@@ -724,7 +724,7 @@ msgstr "Het Contact Naam voor het sorteren, eerst familienaam dan voornaam"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Display Name"
-msgstr "Tonen Naam"
+msgstr "Weergavenaam"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Full Name of the Contact with prefixes and suffixes"
@@ -832,7 +832,7 @@ msgstr "Het subtype van het contact"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Address"
-msgstr "CiviCRM Adres"
+msgstr "CiviCRM-adres"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Primary Address"
@@ -1001,11 +1001,11 @@ msgstr "Het type nummer: telefoon, GSM, Fax of Pager"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Website"
-msgstr "CiviCRM Website"
+msgstr "CiviCRM-website"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Website Type"
-msgstr "Website Type"
+msgstr "Websitetype"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The type of website for the contact"
@@ -1806,7 +1806,7 @@ msgstr "Lidmaatschap startdatum"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Membership's End Date"
-msgstr "Lidmaatschap einddatum"
+msgstr "Einddatum lidmaatschap"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source of the relationship"
@@ -2350,7 +2350,7 @@ msgstr "Link naar Evenement verwijderen"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_website_type.inc
 msgid "Website type"
-msgstr "Website type"
+msgstr "Websitetype"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_state.inc
 msgid "State province"
