po: update po/nl_NL/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -4,11 +4,12 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # HanV <han.velthuis@home.nl>, 2013-2016
+# Kevin Levie <kevin@levity.nl>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-26 16:54+0000\n"
+"PO-Revision-Date: 2016-02-15 15:54+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +40,7 @@ msgstr "Laatst gewijzigd door:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument: "
-msgstr "Betaalmethode:"
+msgstr "Betaalwijze:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
@@ -99,7 +100,7 @@ msgstr "Omdat er een betaalmethode is met het geselecteerde type kan het type ni
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br>"
-msgstr "Geselecteerde betaalmethode type is verwijderd."
+msgstr "Het geselecteerde betaalmethode-type is verwijderd."
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
@@ -143,7 +144,7 @@ msgstr "Variabelenaam van betaalmethode die in de code gebruikt wordt"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Title"
-msgstr "Betaalmethode titel"
+msgstr "Titel betaalmethode"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
@@ -828,7 +829,7 @@ msgstr "Financieel type is actief?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Payment Processor ID"
-msgstr "Betaalmethode ID"
+msgstr "Betaalmethode-ID"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Payment Processor Domain"
