po: update po/fr_FR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-12 20:09+0000\n"
+"PO-Revision-Date: 2016-02-15 20:43+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2818,7 +2818,7 @@ msgstr "Ajouter le contact à un Groupe CiviCRM"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact who should be added to the group"
-msgstr ""
+msgstr "Contact qui devrait être ajouté au groupe"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Remove Contact from CiviCRM Group"
@@ -2856,7 +2856,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be added to selected group."
-msgstr ""
+msgstr "Le contact va être ajouté au groupe sélectionné."
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Contact will be removed from selected group."
