--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:14+0000\n"
+"PO-Revision-Date: 2016-02-15 15:54+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1057,7 +1057,7 @@ msgstr "Dossiertype gewicht"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Definition"
-msgstr "Dossiertype definitie"
+msgstr "Definitie dossiertype"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
